--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
-.App {
-  text-align: center;
+body {
+  background-color: #202020;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +9,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
+/* Adds rotate effect
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +19,4 @@
     transform: rotate(360deg);
   }
 }
+*/
