--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,58 @@ body {
   background-color: #202020;
 }
 
-.digitKeys {
-  color:azure;
+#digitSVG text {
+  fill:azure;
 }
+
+
+.container {
+  --d: 6.5em; /* image size */
+  --rel: 1; /* how much extra space we want between images, 1 = one image size */
+  --r: calc(.5*(1 + var(--rel))*var(--d)/var(--tan)); /* circle radius */
+  --s: calc(2*var(--r) + var(--d)); /* container size */
+  position: relative;
+  width: var(--s); height: var(--s);
+  background: silver /* to show images perfectly fit in container */
+}
+
+.container .digitKey {
+  position: absolute;
+  top: 50%; left: 50%;
+  margin: calc(-.5*var(--d));
+  width: var(--d); height: var(--d);
+  --az: calc(var(--i)*1turn/var(--m));
+  transform: 
+    rotate(var(--az)) 
+    translate(var(--r))
+    rotate(calc(-1*var(--az)))
+}
+
+#digitSVG { 
+  max-width: 100% 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
