--- a/src/App.css
+++ b/src/App.css
@@ -7,30 +7,25 @@ body {
 }
 
 
-.container {
-  --d: 6.5em; /* image size */
-  --rel: 1; /* how much extra space we want between images, 1 = one image size */
-  --r: calc(.5*(1 + var(--rel))*var(--d)/var(--tan)); /* circle radius */
-  --s: calc(2*var(--r) + var(--d)); /* container size */
-  position: relative;
-  width: var(--s); height: var(--s);
-  background: silver /* to show images perfectly fit in container */
-}
-
-.container .digitKey {
+div#digitKey {
+  height: 300px;
+  width: 300px;
   position: absolute;
-  top: 50%; left: 50%;
-  margin: calc(-.5*var(--d));
-  width: var(--d); height: var(--d);
-  --az: calc(var(--i)*1turn/var(--m));
-  transform: 
-    rotate(var(--az)) 
-    translate(var(--r))
-    rotate(calc(-1*var(--az)))
+  margin: 0 auto;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
-
-#digitSVG { 
-  max-width: 100% 
+div.circle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+body {
+  margin: 0 auto;
+  background: papayawhip;
 }
 
 
