--- a/src/components/Reminders/reminders.css
+++ b/src/components/Reminders/reminders.css
@@ -4,12 +4,18 @@ h1 {
     font-family: 'SF Pro Rounded';
     src: url(../../../public/reminder-font.ttf);
     letter-spacing: .06em;
+    font-size: 45%;
+    padding: 3px;
+    margin: 3px;
 }
 
 .reminders form{ /* fixed form from being hidden behind it's parent div */
   display: flex;
   position: absolute; /* fixed form from being hidden behind it's parent div */
   z-index:9;
+  padding: 3;
+  margin: 3px;
+
 }
 
 .reminders > div {
