--- a/src/components/Reminders/RmList/Footer/style.css
+++ b/src/components/Reminders/RmList/Footer/style.css
@@ -13,6 +13,7 @@ input {
     border-color: rgb(253, 142, 32);
     border-radius: 5px;
     margin: 3px;
+    color: white;
   }
 
   .rm-list-footer {
