--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@ body {
   background-color: #202020;
 }
 
+h1 {
+  color: rgb(253, 142, 32);
+  color-scheme: dark;
+  font-family: 'SF Pro Rounded';
+  src: url(./reminder-font.ttf);
+  letter-spacing: .06em;
+  font-size: 45%;
+  padding: 3px;
+  margin: 3px;
+  z-index: 1;
+  position: absolute;
+}
+
 .App {
   position: relative;
   display: grid;
